    {#} !credits * does not show all other sites when a site is offline
    {#} No more blank lines removed from slftp.ini when file is rewritten (split_site_data only) (#145)
    {#} Classification was never updated when doing a tvinfo update
    {#} IMDB post_lookup_infos config setting is now respected
    {#} disable MySQL if host=(empty) in slftp.ini
    {^} Error handling for taskrace (dirlisttask, mkdirtask and racetask) is done
    {^} Show in a log message what's wrong with MySQL when using as predb
    {^} !inviteme suggest !ircnick command with site username as IRCNick if it's empty
    {^} TVMaze Us US mismatch gets detected better now (#1)
    {^} Rule tvrunning will be also true on Status "In Development"
    {^} No 'Section on SITE for SECTION was not found' on COMPLETE and NUKE announce (#117)
    {^} Retry 3x Genre fetch from TheTVDB if a response error occur (lag, bad response, timeout, ...) (#28, #70)
    {^} No [NOT SET] message if site is set to permdown & rename to [SECTION NOT SET] (#108)
    {^} Re-written backup unit code, supporting old options (skipfiles, backup_dir) and includes all .db files in backup (#134)
    {^} Announce old + renamed groupname when check with renamed_group_checker was positive
    {^} languagebase.slftp gets automatically renamed to slftp.languagebase
    {^} Disabled all fake checking for sitepres
    {^} Better input checks and more output for !setoffset, !pretimemode, !pretimemode2 and !addpremode
    {^} No need to !setdown before !setpermdown (#108)
    {^} !sslmethod checks if valid SSL method + shows which one is used
    {^} Removed warning when "section not found" for complete & nuke announce (#117)
    {^} Some TV Shows weren't detected as STV from IMDb fetch
    {^} MVID Year regex changed from \-(\d{4})\- to \-((19|20)\d{2})\-
    {^} PermDown check on all irc commands with sitename = '*', means no setting changing for PermDown sites when using '*'